--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -73,7 +73,9 @@
                             <td>
                                 <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-info">Details</a>
                                 <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-success btn-primary">Edit</a>
-                                <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger">Delete</a>
+                                <form asp-action="Delete" asp-route-id="@user.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this?');">
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                </form>
                             </td>
                         </tr>
                     }
