Admin Crud Pagination and web app pagination error fix

--- a/ASI.Basecode.WebApp/Views/Home/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="masterlist-module-title">
-                            <a class="module-item-title" asp-controller="Book" asp-action="Index"><i
+                            <a class="module-item-title" asp-controller="Genre" asp-action="Index"><i
                                     class="sidenav-icon fa-solid fa-masks-theater"></i>Genres</a>
                         </div>
                         <div class="masterlist-module-title-odd">
@@ -28,7 +28,7 @@
                                 Books</a>
                         </div>
                         <div class="masterlist-module-title">
-                            <a asp-controller="Book" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i>
+                            <a asp-controller="Author" asp-action="Index"><i class="sidenav-icon fa-solid fa-feather"></i>
                                 Authors</a>
                         </div>
                         <div class="masterlist-module-title-odd">
