--- a/Skooby.WebApp/Views/Home/SuggestedForU.cshtml
+++ b/Skooby.WebApp/Views/Home/SuggestedForU.cshtml
@@ -2,39 +2,37 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "New Books Page";
+    ViewData["Title"] = "Suggested For You";
 }
 
 @section styles {
-    
+    <link rel="stylesheet" href="~/css/dashboard.css" />
     <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/newbooks.css" />
     <link rel="stylesheet" href="~/css/pagination.css" />
-    <link rel="stylesheet" href="~/css/dashboard.css" />
 }
- 
 
 <style>
-    .new-books-container {
+    .top-books-container {
         width: 740px;
         height: 450px;
-    }                            
-   .page-link {
-       padding: 0 !important
-   }
-</style>
+    }
 
+    .page-link {
+        padding: 0 !important
+    }
+</style>
 <section class="new-books-section new-books-dashboard">
     <div>
-        <h1>Unveiling New Worlds in Every Page</h1>
-        <h2>Read the latest!</h2>
-        <h3>New books</h3>
+        <h1>Suggested For You</h1>
+        <h2>Read books that fits your taste!</h2>
+        <h3>Results</h3>
     </div>
 
-    <hr />
 
-    <div class="new-books-container" id="book-wrapper">
-        
+    <hr />
+    <div class="top-books-container" id="book-wrapper">
+
         <div class="book-wrapper">
             @{
                 var recentBooks = Model;
@@ -56,7 +54,7 @@
             }
 
         </div>
-   </div>
+    </div>
     <div class="pagination-container">
         <!-- Pagination -->
         <div class="pagination">
@@ -64,7 +62,7 @@
             {
                 int previousViewLastPage = ((ViewBag.CurrentPage - 1) / 5) * 5;
 
-                <a href="@Url.Action("NewBooks", "Home", new { pageNo = previousViewLastPage })" class="prev-next">&lt;</a>
+                <a href="@Url.Action("SuggestedForU", "Home", new { pageNo = previousViewLastPage })" class="prev-next">&lt;</a>
             }
 
             @{
@@ -80,7 +78,7 @@
                 }
                 else
                 {
-                    <a href="@Url.Action("NewBooks", "Home", new { pageNo = i })" class="page-link">@i</a>
+                    <a href="@Url.Action("SuggestedForU", "Home", new { pageNo = i })" class="page-link">@i</a>
                 }
             }
             @if (ViewBag.CurrentPage <= (ViewBag.TotalPages - (ViewBag.TotalPages % 5)) && ViewBag.TotalPages > 5)
@@ -93,21 +91,15 @@
 
                 int nextViewFirstPage = ViewBag.CurrentPage < 6 ? 6 : ((ViewBag.CurrentPage - 1) / 5) * 5 + 6;
 
-                <a href="@Url.Action("NewBooks", "Home", new { pageNo = nextViewFirstPage })" class="prev-next">&gt;</a>
+                <a href="@Url.Action("SuggestedForU", "Home", new { pageNo = nextViewFirstPage })" class="prev-next">&gt;</a>
             }
+        </div>
     </div>
-    </div>
-
-
 </section>
 
-
-
-
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
- <script>
-    $(document).ready(function () { 
+<script>
+    $(document).ready(function () {
         $(".book-content").hover(
             function () {
                 $(this).find(".book-info-card").show();
@@ -115,9 +107,9 @@
             function () {
                 $(this).find(".book-info-card").hide();
             }
-        ); 
+        );
     });
-</script>  
+</script>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
