--- a/Skooby.WebApp/Views/Home/TopRatedBooks.cshtml
+++ b/Skooby.WebApp/Views/Home/TopRatedBooks.cshtml
@@ -60,7 +60,7 @@
         <div class="pagination">
             @if (ViewBag.CurrentPage > 5)
             {
-                int previousViewLastPage = (ViewBag.CurrentPage / 5) * 5;
+                int previousViewLastPage = ((ViewBag.CurrentPage - 1) / 5) * 5;
 
                 <a href="@Url.Action("TopRatedBooks", "Home", new { pageNo = previousViewLastPage })" class="prev-next">&lt;</a>
             }
@@ -89,7 +89,7 @@
             @if (ViewBag.CurrentPage <= (ViewBag.TotalPages - (ViewBag.TotalPages % 5)) && ViewBag.TotalPages > 5)
             {
 
-                int nextViewFirstPage = ViewBag.CurrentPage < 6 ? 6 : (ViewBag.CurrentPage / 5) * 5 + 6;
+                int nextViewFirstPage = ViewBag.CurrentPage < 6 ? 6 : ((ViewBag.CurrentPage - 1) / 5) * 5 + 6;
 
                 <a href="@Url.Action("TopRatedBooks", "Home", new { pageNo = nextViewFirstPage })" class="prev-next">&gt;</a>
             }
