search placeholders fix

--- a/ASI.Basecode.WebApp/Views/Author/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Author/Index.cshtml
@@ -31,7 +31,7 @@
                 <div class="search-container">
                     <form class="search-container d-flex" role="search" method="get"
                         action="@Url.Action("Index", "Author")">
-                        <input class="form-control me-2 search-input" type="search" placeholder="Search"
+                        <input class="form-control me-2 search-input" type="search" placeholder="Search Authors"
                             aria-label="Search" name="searchQuery">
                         <button class="btn btn-outline-success search-button" type="submit">Search</button>
                     </form>
