--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -25,14 +25,14 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
 <h2 class="table-title">Book Management</h2>
 <div class="table-container">
     <div class="container table-tools">
-        
+
         <div class="row">
 
             <div class="col col-left">
                 <div class="search-container">
                     <form class="search-container d-flex" role="search" method="get"
                         action="@Url.Action("Index", "Book")">
-                        <input class="form-control me-2 search-input" type="search" placeholder="Search"
+                        <input class="form-control me-2 search-input" type="search" placeholder="Search Books"
                             aria-label="Search" name="searchQuery">
                         <button class="btn btn-outline-success search-button" type="submit">Search</button>
                     </form>
