--- a/ASI.Basecode.WebApp/Views/Reviews/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Reviews/Index.cshtml
@@ -28,7 +28,7 @@
                 <div class="search-container">
                     <form class="search-container d-flex" asp-action="Index" method="get">
                         <input type="text" name="searchString" class=" me-2 search-input form-control"
-                               placeholder="Search Genres" />
+                            placeholder="Search Reviews" />
                         <button class="btn btn-outline-success search-button" type="submit">Search</button>
 
                     </form>
@@ -36,7 +36,7 @@
             </div>
             <div class="col col-right">
                 <a href="@Url.Action("Create", "Reviews")" class="btn btn-skooby btn-primary">Add New Review</a>
-                 
+
             </div>
         </div>
 
