--- a/Skooby.WebApp/Views/Home/Index.cshtml
+++ b/Skooby.WebApp/Views/Home/Index.cshtml
@@ -2,17 +2,12 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Home Page";
-<<<<<<< Updated upstream
-=======
-
-    
->>>>>>> Stashed changes
 }
 
 @section styles {
     <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/dashboard.css" />
-} 
+}
 <style>
     .sidebar-content {
         height: auto;
@@ -23,18 +18,10 @@
         position: -webkit-sticky;
         position: sticky;
         top: 10%;
-        box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
-        -webkit-box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
-        -moz-box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
+        box-shadow: 2px 1px 8px 0px rgba(0, 0, 0, 0.67);
+        -webkit-box-shadow: 2px 1px 8px 0px rgba(0, 0, 0, 0.67);
+        -moz-box-shadow: 2px 1px 8px 0px rgba(0, 0, 0, 0.67);
     }
-<<<<<<< Updated upstream
-=======
-
- 
-  
-
-
->>>>>>> Stashed changes
 </style>
 
 <div class="background-div">
@@ -67,15 +54,16 @@
                                 <div class="book-content">
                                     <a href="@Url.Action("ViewBook", "Home", new { id = book.Id })">
                                         <div class="book-image-preview">
-                                             
+
                                             <img class="book-image" src="@book.Image ?? /img/about-us.png" alt="@book.Name" />
-                                            
+
                                         </div>
                                     </a>
                                     <div class="book-info-card" id="per-book-info-@book.Id">
 
                                         <h5 class="book-title book-text">@book.Name</h5>
-                                        <p class="author-name book-text">by @string.Join(", ", book.AuthorNames) • @book.PublishedOn.Year</p>
+                                        <p class="author-name book-text">by @string.Join(", ", book.AuthorNames) •
+                                            @book.PublishedOn.Year</p>
                                         <p class="book-description book-text">@book.Description</p>
                                     </div>
                                     <h6 class="book-title book-text">@book.Name</h6>
@@ -94,7 +82,7 @@
                 <h2 class="sidebar-title">Filter</h2>
                 <form class="d-flex filter-searchbar" role="search" method="get">
                     <input class="form-control me-2 search-input" name="searchTerm" type="search" placeholder="Search"
-                           aria-label="Search">
+                        aria-label="Search">
                     <button class="btn btn-outline-success search-button" type="submit">Search</button>
                 </form>
                 <div>
@@ -104,7 +92,7 @@
                     <a href="@Url.Action("TopRatedBooks", "Home",  new{pageNo = 1})" class="btn-text">Top Rated</a>
                 </div>
 
-                <hr class="filter-divider"/>
+                <hr class="filter-divider" />
                 <h3 class="filter-genretitle">Genres</h3>
 
                 <div class="filter-category-container">
@@ -115,13 +103,13 @@
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 </section>
- 
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
- <script>
-    $(document).ready(function () { 
+<script>
+    $(document).ready(function () {
         $(".book-content").hover(
             function () {
                 $(this).find(".book-info-card").show();
@@ -129,9 +117,9 @@
             function () {
                 $(this).find(".book-info-card").hide();
             }
-        ); 
+        );
     });
-</script>  
+</script>
 @* JQuery Script for deletion (calls delete method in controller as http) *@
 <script>
     $(document).ready(function () {
@@ -149,5 +137,5 @@
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
